--- a/main_dialog.ui
+++ b/main_dialog.ui
@@ -255,7 +255,7 @@
        <string/>
       </property>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>0</x>
@@ -287,7 +287,7 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>160</width>
+           <width>100</width>
            <height>0</height>
           </size>
          </property>
@@ -329,7 +329,7 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>160</width>
+           <width>100</width>
            <height>0</height>
           </size>
          </property>
@@ -429,7 +429,7 @@
         <widget class="QgsMapLayerComboBox" name="polygonCombo">
          <property name="minimumSize">
           <size>
-           <width>160</width>
+           <width>100</width>
            <height>0</height>
           </size>
          </property>
