--- a/login_dialog.ui
+++ b/login_dialog.ui
@@ -84,7 +84,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="passwordLabel">
         <property name="text">
-         <string>Password</string>
+           <string>Token</string>
         </property>
        </widget>
       </item>
