refactor: optimize for submodules
1) in tr(), the context arg, which is the plugin name, is now drawn from config,
not self.plugin_name which is used elsewhere. This is bc translation is
bound to the context name once, and context can't vary between submodules.
Otherwise it raises an exception.

Dialog window title are now, conversely, defined by variables.

--- a/mapflow/main_dialog.ui
+++ b/mapflow/main_dialog.ui
@@ -1053,17 +1053,17 @@
               </property>
               <item>
                <property name="text">
-                <string>Mapflow - SecureWatch</string>
+                <string notr="true">Mapflow - SecureWatch</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>Mapflow - Vivid</string>
+                <string notr="true">Mapflow - Vivid</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>Mapflow - Basemaps</string>
+                <string notr="true">Mapflow - Basemaps</string>
                </property>
               </item>
              </widget>
