feat: display user login in dialog
User login (=username) is now displayed at the bottom of the Processing tab.

Closes https://geoalert.fibery.io/Documentation/Geoalert-API-WM-Mapflow-Users-193#Project_Management/Task/UI-797

--- a/mapflow/main_dialog.ui
+++ b/mapflow/main_dialog.ui
@@ -561,6 +561,19 @@
        <string>Log out</string>
       </property>
      </widget>
+     <widget class="QLabel" name="username">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>17</y>
+        <width>251</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QWidget" name="settingsTab">
